# CCOMP2-2.2-2024-1

./: README.md
Ajedrez sfml/: CMakeLists.txt  Makefile  Piece_hijas.cpp  Piece_hijas.h  board.h  chessGame.cpp  chessGame.h  main.cpp  piece.cpp  piece.h  pieceTextures.cpp
CCOMP1-SFML-master/: CMakeLists.txt
CCOMP1-SFML-master/src/: CMakeLists.txt  CPartida.cpp  CPartida.h  board.cpp  board.h  chessGame.cpp  chessGame.h  main.cpp  piece.cpp  piece.h
Cap 7/Ejercicios cap 7/: 7-24.cpp  7-25.cpp  7-28.cpp  7-29 Iterativo.cpp  7-29 Recursivo.cpp
Control 1/Ejercicio 1/Ejercicio 1/: Enunciado 1.txt  Student.cpp  Student.h
Control 1/Ejercicio 1/Ejercicio 2/: Date.cpp  Date.h  main.cpp
Control 2/funciones/: counterNumbersInString.cpp
JUEGOOOOOOOOO/: CPartida.cpp  CPartida.h  CTabla.cpp  CTabla.h  main.cpp
PARCIAL/parcial pasado/: 2.cpp
Resoluciones/Control 1/: 2.cpp
book/Class GradeBook Using a Two-Dimensional array/: GradeBook.h  main.cpp
book/Class GradeBook Using an array to Store Grades/: GradeBook.h  main.cpp
book/Introduction to C++ Standard Library Class Template vector/: fig07_21.cpp  main.cpp
expo cap 7/: codigo 7-3.cpp  codigo 7-4.cpp  codigo 7-5.cpp
semana 1/: 2-28 - numdigi.cpp  2-28.cpp
semana 3/3.09/: Account.h  AccountTest.cpp
semana 3/3.12/: Date.cpp  Date.h  main.cpp
semana 4/: do-while.cpp  for.cpp
semana1/: 2-18.cpp
semana1/MIE 13-03/: aea.cpp
